Домашнее задание 6